# TestTaskSTART

./: README.md  crontab.txt  main.py  pyproject.toml  requirements.txt  settings.py
capture_metrics/: collector.py  main.py  sender.py
output_metrics/: collector.py  main.py  writer.py
