[tool.poetry]
name = "test-task"
version = "0.1.0"
description = "Тестовое задание для СТАРТ"
authors = ["Egor Monakhov <yegormonahow@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psutil = "^6.0.0"
aiohttp = "^3.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
